14-immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-server
  ports:
    - port: 2283
      targetPort: 2283
      protocol: TCP
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
      name: http
